scrollbar fix for page layout

--- a/fileadmin/templates/loopshape/scss/layout/_page.scss
+++ b/fileadmin/templates/loopshape/scss/layout/_page.scss
@@ -64,7 +64,7 @@ body.moz select {
     }
     
     .body {
-      width: 60%;
+      width: 58%;
       padding-top: 30px;
     }
     
